# aip_robot_interface_eki

./: Dockerfile  README.md  build_docker.sh  start_docker.sh
cpp_core/: CMakeLists.txt  README.md  package.xml
cpp_core/include/cpp_core/: Component.h
cpp_core/include/cpp_core/core/: Chrono.h  ChronoEntry.h  ChronoTime.h  LogEntry.h  LogLevel.h  Logger.h
cpp_core/include/cpp_core/events/: Event.h  EventDispatcher.h  EventListener.h
cpp_core/include/cpp_core/tools/: CommandLine.h  IO.h  ThreadExecuter.h
cpp_core/include/cpp_core/types/: Point.h  Pose.h
cpp_core/src/core/: Chrono.cpp  ChronoTime.cpp  LogLevel.cpp  Logger.cpp
cpp_core/src/events/: Event.cpp
cpp_core/src/tools/: IO.cpp  ThreadExecuter.cpp
cpp_core/src/types/: Pose.cpp
docs/: robot_interface_eki.drawio
lib/: CMakeLists.txt  package.xml
lib/include/robot_interface_eki/: Command.h  GripCommand.h  MetaCommand.h  MoveCommand.h  Robot.h  RobotMetaState.h  RobotState.h
lib/include/robot_interface_eki/core/: CommandSequence.h  EKInterface.h
lib/include/robot_interface_eki/xml/: XmlReader.h  XmlReaderOld.h  XmlWriter.h
lib/src/: Command.cpp  GripCommand.cpp  MetaCommand.cpp  MoveCommand.cpp  Robot.cpp  RobotMetaState.cpp  RobotState.cpp
lib/src/core/: CommandSequence.cpp  EKInterface.cpp  Types.cpp
lib/src/xml/: XmlReader.cpp  XmlWriter.cpp
ros/: CMakeLists.txt  package.xml
ros/config/: params.yaml
ros/include/robot_interface_eki/: Server.h
ros/launch/: robot_interface.launch.py
ros/scripts/: client.py
ros/src/: Server.cpp
ros/srv/: Grip.srv  Move.srv
