<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_interface_eki</name>
  <version>0.0.0</version>
  <description>Send commands with python script to move the robot (eki)</description>
  <maintainer email="javier.moviglia@hs-karlsruhe.de">javier</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_copyright</buildtool_depend>
  <buildtool_depend>ament_pep257</buildtool_depend>
  <buildtool_depend>ament_pep8</buildtool_depend>
  <buildtool_depend>ament_pyflakes</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
